--- a/Navigation_Pixels.ipynb
+++ b/Navigation_Pixels.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the first project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893).\n",
+    "Congratulations for completing the first project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893)!  In this notebook, you will learn how to control an agent in a more challenging environment, where it can learn directly from raw pixels!  **Note that this exercise is optional!**\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
@@ -17,12 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -31,50 +33,27 @@
    "source": [
     "Next, we will start the environment!  **_Before running the code cell below_**, change the `file_name` parameter to match the location of the Unity environment that you downloaded.\n",
     "\n",
-    "- **Mac**: `\"path/to/Banana.app\"`\n",
-    "- **Windows** (x86): `\"path/to/Banana_Windows_x86/Banana.exe\"`\n",
-    "- **Windows** (x86_64): `\"path/to/Banana_Windows_x86_64/Banana.exe\"`\n",
-    "- **Linux** (x86): `\"path/to/Banana_Linux/Banana.x86\"`\n",
-    "- **Linux** (x86_64): `\"path/to/Banana_Linux/Banana.x86_64\"`\n",
-    "- **Linux** (x86, headless): `\"path/to/Banana_Linux_NoVis/Banana.x86\"`\n",
-    "- **Linux** (x86_64, headless): `\"path/to/Banana_Linux_NoVis/Banana.x86_64\"`\n",
+    "- **Mac**: `\"path/to/VisualBanana.app\"`\n",
+    "- **Windows** (x86): `\"path/to/VisualBanana_Windows_x86/Banana.exe\"`\n",
+    "- **Windows** (x86_64): `\"path/to/VisualBanana_Windows_x86_64/Banana.exe\"`\n",
+    "- **Linux** (x86): `\"path/to/VisualBanana_Linux/Banana.x86\"`\n",
+    "- **Linux** (x86_64): `\"path/to/VisualBanana_Linux/Banana.x86_64\"`\n",
+    "- **Linux** (x86, headless): `\"path/to/VisualBanana_Linux_NoVis/Banana.x86\"`\n",
+    "- **Linux** (x86_64, headless): `\"path/to/VisualBanana_Linux_NoVis/Banana.x86_64\"`\n",
     "\n",
-    "For instance, if you are using a Mac, then you downloaded `Banana.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
+    "For instance, if you are using a Mac, then you downloaded `VisualBanana.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
     "```\n",
-    "env = UnityEnvironment(file_name=\"Banana.app\")\n",
+    "env = UnityEnvironment(file_name=\"VisualBanana.app\")\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:unityagents:\n",
-      "'Academy' started successfully!\n",
-      "Unity Academy name: Academy\n",
-      "        Number of Brains: 1\n",
-      "        Number of External Brains : 1\n",
-      "        Lesson number : 0\n",
-      "        Reset Parameters :\n",
-      "\t\t\n",
-      "Unity brain name: BananaBrain\n",
-      "        Number of Visual Observations (per agent): 0\n",
-      "        Vector Observation space type: continuous\n",
-      "        Vector Observation space size (per agent): 37\n",
-      "        Number of stacked Vector Observation: 1\n",
-      "        Vector Action space type: discrete\n",
-      "        Vector Action space size (per agent): 4\n",
-      "        Vector Action descriptions: , , , \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "env = UnityEnvironment(file_name=\"Banana.app\")"
+    "env = UnityEnvironment(file_name=\"...\")"
    ]
   },
   {
@@ -86,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +86,7 @@
     "- `2` - turn left\n",
     "- `3` - turn right\n",
     "\n",
-    "The state space has `37` dimensions and contains the agent's velocity, along with ray-based perception of objects around agent's forward direction.  A reward of `+1` is provided for collecting a yellow banana, and a reward of `-1` is provided for collecting a blue banana. \n",
+    "The environment state is an array of raw pixels with shape `(1, 84, 84, 3)`.  *Note that this code differs from the notebook for the project, where we are grabbing **`visual_observations`** (the raw pixels) instead of **`vector_observations`**.* A reward of `+1` is provided for collecting a yellow banana, and a reward of `-1` is provided for collecting a blue banana. \n",
     "\n",
     "Run the code cell below to print some information about the environment."
    ]
@@ -129,10 +108,12 @@
     "print('Number of actions:', action_size)\n",
     "\n",
     "# examine the state space \n",
-    "state = env_info.vector_observations[0]\n",
-    "print('States look like:', state)\n",
-    "state_size = len(state)\n",
-    "print('States have length:', state_size)"
+    "state = env_info.visual_observations[0]\n",
+    "print('States look like:')\n",
+    "plt.imshow(np.squeeze(state))\n",
+    "plt.show()\n",
+    "state_size = state.shape\n",
+    "print('States have shape:', state.shape)"
    ]
   },
   {
@@ -145,7 +126,7 @@
     "\n",
     "Once this cell is executed, you will watch the agent's performance, if it selects an action (uniformly) at random with each time step.  A window should pop up that allows you to observe the agent, as it moves through the environment.  \n",
     "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agent is able to use its experience to gradually choose better actions when interacting with the environment!"
+    "Of course, you'll have to change the code so that the agent is able to use its experience to gradually choose better actions when interacting with the environment!"
    ]
   },
   {
@@ -155,12 +136,12 @@
    "outputs": [],
    "source": [
     "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
-    "state = env_info.vector_observations[0]            # get the current state\n",
+    "state = env_info.visual_observations[0]            # get the current state\n",
     "score = 0                                          # initialize the score\n",
     "while True:\n",
     "    action = np.random.randint(action_size)        # select an action\n",
     "    env_info = env.step(action)[brain_name]        # send the action to the environment\n",
-    "    next_state = env_info.vector_observations[0]   # get the next state\n",
+    "    next_state = env_info.visual_observations[0]   # get the next state\n",
     "    reward = env_info.rewards[0]                   # get the reward\n",
     "    done = env_info.local_done[0]                  # see if episode has finished\n",
     "    score += reward                                # update the score\n",
@@ -198,20 +179,13 @@
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "drlnd",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "drlnd"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -223,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
